added rapidAPI and some delete API
